// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Panel Panel renders correctly, dev false 1`] = `
<div
  className="versions-panel-container"
>
  <label
    htmlFor="versionsAddonDevMode"
  >
    <input
      checked={false}
      id="versionsAddonDevMode"
      onChange={[Function]}
      type="checkbox"
    />
     Developer mode
  </label>
  <div
    className="versions-panel-list"
  >
    <p>
      No versions found
    </p>
  </div>
</div>
`;

exports[`Panel Panel renders correctly, dev true 1`] = `
<div
  className="versions-panel-container"
>
  <label
    htmlFor="versionsAddonDevMode"
  >
    <input
      checked={true}
      id="versionsAddonDevMode"
      onChange={[Function]}
      type="checkbox"
    />
     Developer mode
  </label>
  <div
    className="versions-panel-list"
  >
    <p>
      No versions found
    </p>
  </div>
</div>
`;
